# ollama_fastapi_uv

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
test_ollama_uv/configs/: logging_config.py
test_ollama_uv/prompts/: prompt_templates.py
test_ollama_uv/schemas/: pydantic_schema.py
test_ollama_uv/services/: model_class.py
utils/: check_model.py
