[project]
name = "test-ollama-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorlog>=6.9.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "ollama>=0.4.8",
    "pydantic>=2.11.4",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.8",
]
